Revision history for Perl module Mail::Chimp

0.12 April 11, 2009
  - Add more flexibility for API version (Drew Taylor)

0.11 March 15, 2009
  - First public release
